--- a/.config/taskfiles/lint/Taskfile.yml
+++ b/.config/taskfiles/lint/Taskfile.yml
@@ -40,7 +40,7 @@ tasks:
 
   commit:
     deps:
-      - :common:node:dependencies:local
+      - :install:local:modules
       - :install:npm:commitlint
     summary: |
       # Lint a commit message
@@ -101,7 +101,7 @@ tasks:
 
   eslint:
     deps:
-      - :common:node:dependencies:local
+      - :install:local:modules
       - :install:npm:eslint
     desc: Lint with `eslint`
     summary: |
@@ -124,7 +124,7 @@ tasks:
 
   js:
     deps:
-      - :common:node:dependencies:local
+      - :install:local:modules
       - :install:npm:eslint
     cmds:
       - eslint --format pretty --ext .js,.jsx,.ts {{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}.{{end}}
@@ -132,7 +132,7 @@ tasks:
   lint-staged:
     deps:
       - :common:node:dependencies:global
-      - :common:node:dependencies:local
+      - :install:local:modules
       - :common:python:requirements
     cmds:
       - lint-staged
