--- a/common/.config/taskfiles/Taskfile-fix.yml
+++ b/common/.config/taskfiles/Taskfile-fix.yml
@@ -7,7 +7,7 @@ vars:
 tasks:
   eslint:
     deps:
-      - :common:node:dependencies:local
+      - :install:local:modules
       - :install:npm:eslint
     desc: Fix JavaScript/TypeScript errors automatically
     summary: |
@@ -27,7 +27,7 @@ tasks:
 
   json:
     deps:
-      - :common:node:dependencies:local
+      - :install:local:modules
       - :install:npm:eslint
     desc: Alphabetically sort JSON
     summary: |
@@ -111,7 +111,7 @@ tasks:
 
   prettier:
     deps:
-      - :common:node:dependencies:local
+      - :install:local:modules
       - :install:npm:prettier
     desc: Automatically format most files using Prettier
     summary: |
@@ -274,7 +274,7 @@ tasks:
 
   yaml:order:
     deps:
-      - :common:node:dependencies:local
+      - :install:local:modules
       - :install:npm:eslint
     summary: |
       # Ensure YML files are sorted properly
