--- a/.config/taskfiles/common/Taskfile.yml
+++ b/.config/taskfiles/common/Taskfile.yml
@@ -35,9 +35,9 @@ tasks:
 
   commit:
     deps:
+      - :install:local:modules
       - :install:npm:commitizen
       - :install:npm:commitlint
-      - node:dependencies:local
       - python:requirements
     desc: Lint staged files, report spelling errors, and open a _required_ commit dialoge
     summary: |
@@ -59,10 +59,10 @@ tasks:
 
   husky:
     deps:
+      - :install:local:modules
       - :install:npm:commitizen
       - :install:npm:commitlint
       - :install:npm:husky
-      - node:dependencies:local
     cmds:
       - task: husky:install
       - task: husky:permissions
@@ -124,26 +124,6 @@ tasks:
     status:
       - '[[ "${container:=}" == "docker" ]]'
 
-  node:dependencies:local:
-    run: once
-    cmds:
-      - task: :install:local:modules
-
-  node:dependencies:local:install:
-    deps:
-      - :install:software:node
-    cmds:
-      - |
-        if [ "${container:=}" != "docker" ]; then
-          {{.NPM_PROGRAM}} install --legacy-peer-deps --force
-          {{.NPM_PROGRAM}} audit fix --force || true
-        fi
-    sources:
-      - package.json
-    preconditions:
-      - sh: test -f package.json
-        msg: The package.json file appears to be missing!
-
   precommit:
     deps:
       - :fix:json
@@ -197,7 +177,6 @@ tasks:
 
   python:requirements:venv:
     deps:
-      - :install:python:virtualenv
       - :install:software:rsync
     vars:
       RANDOM_STRING:
@@ -226,7 +205,7 @@ tasks:
 
   requirements:
     deps:
-      - node:dependencies:local
+      - :install:local:modules
       - node:dependencies:global
       - python:requirements
     desc: Ensure all the dependencies are installed (Node.js, Python, etc.)
