--- a/common/.config/taskfiles/upstream/Taskfile-shared.yml
+++ b/common/.config/taskfiles/upstream/Taskfile-shared.yml
@@ -2,14 +2,14 @@
 version: '3'
 
 vars:
-  COMMON_FOLDER: common
+  SHARED_COMMON_FOLDER: common
   VARIABLES_URL: https://gitlab.com/megabyte-labs/documentation/shared/-/raw/master/common.json
 
 tasks:
   copy:
     cmds:
       - mv .gitlab-ci.yml .gitlab-ci.yml.bak
-      - cp -rT ./{{.COMMON_FOLDER}}/ .
+      - cp -rT ./{{.SHARED_COMMON_FOLDER}}/ .
       - mv .gitlab-ci.yml.bak .gitlab-ci.yml
       - task: :common:husky:permissions
 
@@ -51,7 +51,7 @@ tasks:
           {{.NPX_HANDLE}}hbs --data .variables.json --helper ./.config/hbs.cjs "$FILE" --stdout > "${FILE//.hbs}"
           rm "$FILE"
         }
-        find . -type f -not \( -path './{{.COMMON_FOLDER}}*' -o -path './deprecated*' -o {{.IGNORE_FOLDERS}} \) -prune -name '*.hbs.*' | while read FILE; do
+        find . -type f -not \( -path './{{.SHARED_COMMON_FOLDER}}*' -o -path './deprecated*' -o {{.IGNORE_FOLDERS}} \) -prune -name '*.hbs.*' | while read FILE; do
           handlebars "$FILE" &
         done
         wait
@@ -64,7 +64,7 @@ tasks:
           {{.NPX_HANDLE}}hbs --data .variables.json --helper ./.config/hbs.cjs "$FILE" --stdout > "${FILE%.*}"
           rm "$FILE"
         }
-        find . -type f -not \( -path './{{.COMMON_FOLDER}}*' -o -path './deprecated*' -o {{.IGNORE_FOLDERS}} \) -prune -name '*.handlebars' | while read FILE; do
+        find . -type f -not \( -path './{{.SHARED_COMMON_FOLDER}}*' -o -path './deprecated*' -o {{.IGNORE_FOLDERS}} \) -prune -name '*.handlebars' | while read FILE; do
           handlebars "$FILE" &
         done
         wait
