--- a/common/.config/taskfiles/install/Taskfile-software.yml
+++ b/common/.config/taskfiles/install/Taskfile-software.yml
@@ -30,7 +30,7 @@ tasks:
           brew update --force --quiet
           chmod -R go-w "$(brew --prefix)/share/zsh"
         fi
-      
+
   brew:formulae:
     deps:
       - brew
@@ -116,7 +116,8 @@ tasks:
 
   common:linux:unknown:
     cmds:
-      - true warn "You are using an operating system that we do not directly support. Please make sure the equivalent of `build-essential`, `curl`, `file`, `git`, and `procps` are installed."
+      - true warn "You are using an operating system that we do not directly support. Please make sure
+        the equivalent of `build-essential`, `curl`, `file`, `git`, and `procps` are installed."
 
   common:windows:
     cmds:
