--- a/common/.gitlab/ci/lint/eslint.gitlab-ci.yml
+++ b/common/.gitlab/ci/lint/eslint.gitlab-ci.yml
@@ -3,7 +3,7 @@ eslint:
   stage: lint
   allow_failure: true
   image:
-    name: megabytelabs/eslint:slim
+    name: megabytelabs/yamllint:slim
     entrypoint: ['']
   variables:
     GIT_DEPTH: 1
