--- a/.config/taskfiles/lint/Taskfile.yml
+++ b/.config/taskfiles/lint/Taskfile.yml
@@ -2,10 +2,12 @@
 version: '3'
 
 vars:
-  CSPELL_CONFIG: .common/.cspell.json
-  IGNORE_FOLDERS: -name .autodoc -o -name .cache -o -name .common -o -name .git -o -name .husky
-    -o -name .modules -o -name .npm -o -name .task -o -name .venv -o -name .vscode -o -name node_modules
-    -o -name venv
+  ANSIBLE_LINT_CONFIG: .config/ansible-lint.yml
+  COMMITLINT_CONFIG: .config/commitlint.config.cjs
+  CSPELL_CONFIG: .config/.cspell.json
+  FLAKE8_CONFIG: .config/flake8.toml
+  PRETTIERIGNORE_CONFIG: .config/prettierignore
+  YAMLLINT_CONFIG: .config/yamllint.yml
 
 tasks:
   all:
@@ -36,7 +38,7 @@ tasks:
 
       For more information, see [Ansible Lint's GitHub page](https://github.com/ansible-community/ansible-lint).
     cmds:
-      - ansible-lint
+      - ansible-lint -c {{.ANSIBLE_LINT_CONFIG}}
 
   commit:
     deps:
@@ -51,7 +53,7 @@ tasks:
       **Example:**
       `task lint:commit -- 'My commit message'`
     cmds:
-      - if [ ! -z '{{.CLI_ARGS}}' ]; then commitlint -e '{{.CLI_ARGS}}' --config .common/commitlint.config.cjs; fi
+      - if [ ! -z '{{.CLI_ARGS}}' ]; then commitlint -e '{{.CLI_ARGS}}' --config {{.COMMITLINT_CONFIG}}; fi
     status:
       - '[[ -z "{{.CLI_ARGS}}" ]]'
     preconditions:
@@ -120,14 +122,14 @@ tasks:
       **Example linting specific pattern of files:**
       `task lint:eslint -- '**/*.js'`
     cmds:
-      - eslint --format pretty {{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}.{{end}}
+      - '{{.NPX_HANDLE}}eslint --format pretty {{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}.{{end}}'
 
   js:
     deps:
       - :install:local:modules
       - :install:npm:eslint
     cmds:
-      - eslint --format pretty --ext .js,.jsx,.ts {{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}.{{end}}
+      - '{{.NPX_HANDLE}}eslint --format pretty --ext .js,.jsx,.ts {{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}.{{end}}'
 
   lint-staged:
     deps:
@@ -135,7 +137,7 @@ tasks:
       - :install:local:modules
       - :common:python:requirements
     cmds:
-      - lint-staged
+      - '{{.NPX_HANDLE}}lint-staged'
 
   packer:
     deps:
@@ -167,6 +169,7 @@ tasks:
 
   prettier:
     deps:
+      - :install:local:modules
       - :install:npm:prettier
     desc: Lint formatting using Prettier
     summary: |
@@ -182,7 +185,7 @@ tasks:
 
       For more information, see [Prettier's website](https://prettier.io/).
     cmds:
-      - prettier --list-different {{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}.{{end}}
+      - '{{.NPX_HANDLE}}prettier --ignore-path {{.PRETTIERIGNORE_CONFIG}} --list-different {{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}.{{end}}'
 
   python:
     deps:
@@ -214,9 +217,9 @@ tasks:
     cmds:
       - |
         {{if .CLI_ARGS}}
-          flake8 {{.CLI_ARGS}}
+          flake8 --config {{.FLAKE8_CONFIG}} {{.CLI_ARGS}}
         {{else}}
-          flake8 .
+          flake8 --config {{.FLAKE8_CONFIG}} .
         {{end}}
 
   shell:
@@ -249,9 +252,9 @@ tasks:
     cmds:
       - |
         {{if .CLI_ARGS}}
-          shellcheck {{.CLI_ARGS}}
+          {{.NPX_HANDLE}}shellcheck {{.CLI_ARGS}}
         {{else}}
-          find . -type d \( {{.IGNORE_FOLDERS}} \) -prune -o -type f \( -name '*.sh' -o -name '*.sh.j2' \) -print0 | xargs -0 -r -n1 shellcheck
+          find . -type d \( {{.IGNORE_FOLDERS}} \) -prune -o -type f \( -name '*.sh' -o -name '*.sh.j2' \) -print0 | xargs -0 -r -n1 {{.NPX_HANDLE}}shellcheck
         {{end}}
 
   spelling:
@@ -280,7 +283,7 @@ tasks:
 
   spelling:cli:
     cmds:
-      - cmd: cspell --no-progress --show-context --no-must-find-files --config {{.CSPELL_CONFIG}} {{.CLI_ARGS}}
+      - cmd: '{{.NPX_HANDLE}}cspell --no-progress --show-context --no-must-find-files --config {{.CSPELL_CONFIG}} {{.CLI_ARGS}}'
         ignore_errors: true
 
   spelling:staged:
@@ -292,7 +295,7 @@ tasks:
     cmds:
       - cmd: |
           if [ '{{.STAGED_FILES}}' ]; then
-            cspell --no-summary --no-progress --show-context --no-must-find-files --config {{.CSPELL_CONFIG}} "$STAGED_FILES"
+            {{.NPX_HANDLE}}cspell --no-summary --no-progress --show-context --no-must-find-files --config {{.CSPELL_CONFIG}} "$STAGED_FILES"
           fi
         ignore_errors: true
 
@@ -372,4 +375,4 @@ tasks:
 
       For more information, see the [YAML Lint GitHub page](https://github.com/adrienverge/yamllint).
     cmds:
-      - yamllint -s {{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}.{{end}}
+      - yamllint -c {{.YAMLLINT_CONFIG}} -s {{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}.{{end}}
