--- a/.config/taskfiles/Taskfile-fix.yml
+++ b/.config/taskfiles/Taskfile-fix.yml
@@ -2,9 +2,7 @@
 version: '3'
 
 vars:
-  IGNORE_FOLDERS: -name .autodoc -o -name .cache -o -name .common -o -name .git -o -name .husky
-    -o -name .modules -o -name .npm -o -name .task -o -name .venv -o -name .vscode -o -name node_modules
-    -o -name venv
+  PRETTIERIGNORE_CONFIG: .config/prettierignore
 
 tasks:
   eslint:
@@ -25,10 +23,11 @@ tasks:
       **Example fixing all JS/TS files in a project:**
       `task fix:js`
     cmds:
-      - eslint --fix {{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}.{{end}}
+      - '{{.NPX_HANDLE}}eslint --fix {{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}.{{end}}'
 
   json:
     deps:
+      - :install:local:modules
       - :install:npm:eslint
     desc: Alphabetically sort JSON
     summary: |
@@ -43,7 +42,7 @@ tasks:
       **Example looping through project:**
       `task fix:json`
     cmds:
-      - eslint --fix --format pretty --ext .json {{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}.{{end}}
+      - '{{.NPX_HANDLE}}eslint --fix --format pretty --ext .json {{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}.{{end}}'
 
   misc:
     deps:
@@ -60,21 +59,6 @@ tasks:
 
       **Example applying fixes to all files:**
       `task fix:misc`
-
-      _Note: The example above ignores files in the following folders:_
-
-      * `.autodoc/`
-      * `.cache/`
-      * `.common/`
-      * `.git/`
-      * `.husky/`
-      * `.modules/`
-      * `.npm/`
-      * `.task/`
-      * `.venv/`
-      * `.vscode/`
-      * `node_modules/`
-      * `venv/`
 
       **Example applying fixes to single file:**
       `task fix:misc -- singlefile.js`
@@ -148,7 +132,7 @@ tasks:
 
       For more information, see [Prettier's website](https://prettier.io/).
     cmds:
-      - prettier --write {{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}.{{end}}
+      - '{{.NPX_HANDLE}}prettier --ignore-path {{.PRETTIERIGNORE_CONFIG}} --write {{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}.{{end}}'
 
   python:
     deps:
@@ -158,21 +142,8 @@ tasks:
       # Automatically format Python files using Black
 
       Black is the defacto standard when it comes to autoformatting Python files. This task will
-      automatically format files that end with the `.py` extension. It currently excludes `.py` files
-      that are in the folders with the following names:
-
-      * `.autodoc/`
-      * `.cache/`
-      * `.common/`
-      * `.git/`
-      * `.husky/`
-      * `.modules/`
-      * `.npm/`
-      * `.task/`
-      * `.venv/`
-      * `.vscode/`
-      * `node_modules/`
-      * `venv/`
+      automatically format files that end with the `.py` extension. It ignores `.py` files that are
+      in any of the locations specified in the `IGNORED_FOLDERS` variable in `Taskfile.yml`.
 
       **Example applying fixes to all Python files:**
       `task fix:python`
@@ -202,21 +173,8 @@ tasks:
       # Automatically apply fixes to shell scripts using Shellcheck
 
       Shellcheck is generally used to lint shell scripts. This task uses Shellcheck and `git apply`
-      to automatically apply Shellcheck's recommendations. It only runs on files that are not in
-      the following folders:
-
-      * `.autodoc/`
-      * `.cache/`
-      * `.common/`
-      * `.git/`
-      * `.husky/`
-      * `.modules/`
-      * `.npm/`
-      * `.task/`
-      * `.venv/`
-      * `.vscode/`
-      * `node_modules/`
-      * `venv/`
+      to automatically apply Shellcheck's recommendations. It only runs on files that are not in the
+      `IGNORED_FOLDERS` variable in `Taskfile.yml`.
 
       This task is experimental. It may work to get rid of the Shellcheck lintrue errors but the code
       should still be tested since it might break things. Ideally, you should apply Shellcheck's
@@ -235,10 +193,10 @@ tasks:
     cmds:
       - |
         {{if .CLI_ARGS}}
-          shellcheck -f diff {{.CLI_ARGS}} | git apply
+          {{.NPX_HANDLE}}shellcheck -f diff {{.CLI_ARGS}} | git apply
         {{else}}
           find . -type d \( {{.IGNORE_FOLDERS}} \) -prune -o -type f \( -name '*.sh' -o -name '*.sh.j2' \) \
-            -print0 | xargs -0 shellcheck -f diff | git apply
+            -print0 | xargs -0 {{.NPX_HANDLE}}shellcheck -f diff | git apply
         {{end}}
 
   xml:
@@ -257,7 +215,7 @@ tasks:
       **Example fixing specific `.xml` file(s):**
       `task fix:xml -- 'file_name.xml'`
     cmds:
-      - eslint --fix --format pretty --ext .xml {{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}.{{end}}
+      - '{{.NPX_HANDLE}}eslint --fix --format pretty --ext .xml {{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}.{{end}}'
 
   yaml:
     desc: Autofix YML files
@@ -334,4 +292,4 @@ tasks:
       **Example fixing specific `.yml` file(s):**
       `task fix:yaml:order -- 'file_name.{yml,yaml}'`
     cmds:
-      - eslint --format pretty --fix --ext yml,yaml {{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}.{{end}}
+      - '{{.NPX_HANDLE}}eslint --format pretty --fix --ext yml,yaml {{if .CLI_ARGS}}{{.CLI_ARGS}}{{else}}.{{end}}'
