--- a/.config/taskfiles/ansible/Taskfile-ansibler.yml
+++ b/.config/taskfiles/ansible/Taskfile-ansibler.yml
@@ -28,9 +28,9 @@ tasks:
         sh: mktemp
     cmds:
       - ansibler --generate-compatibility-chart --molecule-results-dir '{{.MOLECULE_RESULTS_PATH}}' --json-file '{{.VARIABLES_PATH}}'
-    log:
-      error: 'Failed to generate the compatibility chart JSON using data from `{{.MOLECULE_RESULTS_PATH}}/`'
-      success: 'Generated compatibility chart JSON and injected it into the `{{.VARIABLES_PATH}}` file'
+    # log:
+    #   error: 'Failed to generate the compatibility chart JSON using data from `{{.MOLECULE_RESULTS_PATH}}/`'
+    #   success: 'Generated compatibility chart JSON and injected it into the `{{.VARIABLES_PATH}}` file'
     sources:
       - '{{.MOLECULE_RESULTS_PATH}}/*'
 
@@ -40,10 +40,11 @@ tasks:
       - :install:npm:prettier
     cmds:
       - ansibler --populate-platforms --json-file '{{.VARIABLES_PATH}}'
-      - prettier --write '{{.META_PATH}}'
-    log:
-      error: 'Error populating the `{{.META_PATH}}` platforms variable with `ansibler.'
-      success: 'Populated the platforms variable in `{{.META_PATH}}` using data from `{{.MOLECULE_RESULTS_PATH}}`'
+      - >
+        {{.NPX_HANDLE}}prettier --write '{{.META_PATH}}'
+    # log:
+    #   error: 'Error populating the `{{.META_PATH}}` platforms variable with `ansibler.'
+    #   success: 'Populated the platforms variable in `{{.META_PATH}}` using data from `{{.MOLECULE_RESULTS_PATH}}`'
     sources:
       - '{{.MAIN_TASKS_PATH}}'
       - '{{.MOLECULE_RESULTS_PATH}}/*'
@@ -54,9 +55,9 @@ tasks:
     cmds:
       - cmd: ansibler --role-dependencies --json-file '{{.VARIABLES_PATH}}'
         ignore_error: true
-    log:
-      error: 'Failed to acquire the `role_dependencies` JSON and inject it into `{{.VARIABLES_PATH}}`'
-      success: 'Populated the `role_dependencies` variable in `{{.VARIABLES_PATH}}`'
+    # log:
+    #   error: 'Failed to acquire the `role_dependencies` JSON and inject it into `{{.VARIABLES_PATH}}`'
+    #   success: 'Populated the `role_dependencies` variable in `{{.VARIABLES_PATH}}`'
     sources:
       - '{{.REQUIREMENTS_PATH}}'
 
