--- a/.config/taskfiles/npm/Taskfile-doc.yml
+++ b/.config/taskfiles/npm/Taskfile-doc.yml
@@ -7,18 +7,18 @@ tasks:
       - :npm:install:typedoc
     desc: Generate TypeDoc HTML documentation
     cmds:
-      - typedoc src/ --exclude "**/*.spec.ts" --out build/docs
+      - '{{.NPX_HANDLE}}typedoc src/ --exclude "**/*.spec.ts" --out build/docs'
 
   json:
     deps:
       - :npm:install:typedoc
     desc: Generate TypeDoc JSON documentation
     cmds:
-      - typedoc src/ --exclude "**/*.spec.ts" --json build/docs/typedoc.json
+      - '{{.NPX_HANDLE}}typedoc src/ --exclude "**/*.spec.ts" --json build/docs/typedoc.json'
 
   open:
     deps:
       - html
       - :npm:install:open-cli
     cmds:
-      - open-cli build/docs/index.html
+      - '{{.NPX_HANDLE}}open-cli build/docs/index.html'
