--- a/.config/taskfiles/npm/Taskfile.yml
+++ b/.config/taskfiles/npm/Taskfile.yml
@@ -30,14 +30,14 @@ tasks:
       - :install:local:modules
       - :install:npm:esbuild
     cmds:
-      - node .common/esbuild.bundled.js
+      - node .config/esbuild/bundled.js
 
   build:esbuild:minified:
     deps:
       - :install:local:modules
       - :install:npm:esbuild
     cmds:
-      - node .common/esbuild.minified.js
+      - node .config/esbuild/minified.js
 
   build:fpm:
     deps:
@@ -50,6 +50,7 @@ tasks:
     cmds:
       - task: build:fpm-build
         vars:
+          NPM_PACKAGE_NAME: '{{.NPM_PACKAGE_NAME}}'
           NPM_PACKAGE_VERSION: '{{.NPM_PACKAGE_VERSION}}'
 
   build:fpm:build:
@@ -117,16 +118,16 @@ tasks:
     deps:
       - :install:software:fpm
     cmds:
-      - fpm -s npm -t {{.FPM_TARGET}}
+      - '{{.NPX_HANDLE}}fpm -s npm -t {{.FPM_TARGET}}
         -p {{.BINARY_BUILD_FOLDER}}/{{.NPM_PACKAGE_NAME}}-{{.NPM_PACKAGE_VERSION}}-{{.SYSTEM}}-{{.ARCHITECTURE}}.{{.FILE_EXTENSION}}
-        --architecture {{.ARCHITECTURE}} .
+        --architecture {{.ARCHITECTURE}} .'
 
   build:nest:
     deps:
       - :install:local:modules
       - :install:npm:nest
     cmds:
-      - nest build
+      - '{{.NPX_HANDLE}}nest build'
       - task: build:nest:after
 
   build:nest:after:
@@ -139,7 +140,7 @@ tasks:
       - :install:local:modules
       - :install:npm:pkg
     cmds:
-      - pkg package.json
+      - '{{.NPX_HANDLE}}pkg package.json'
 
   build:release: 'true'
 
@@ -168,7 +169,7 @@ tasks:
       - :install:software:jq
     desc: Remove unused dependencies
     cmds:
-      - depcheck --json | jq -r '.dependencies[]' | xargs -n1 npm uninstall --save
+      - "{{.NPX_HANDLE}}depcheck --json | jq -r '.dependencies[]' | xargs -n1 npm uninstall --save"
 
   start:
     deps:
@@ -176,14 +177,14 @@ tasks:
       - :install:npm:nest
     desc: Run the application
     cmds:
-      - nest start
+      - '{{.NPX_HANDLE}}nest start'
 
   start:debug:
     deps:
       - :install:local:modules
       - :install:npm:nest
     cmds:
-      - nest start --watch
+      - '{{.NPX_HANDLE}}nest start --watch'
 
   start:inspect:
     deps:
@@ -193,14 +194,14 @@ tasks:
       - :install:npm:ts-node
     desc: Run the application in `watch` mode and open DevTools
     cmds:
-      - ndb nest start --watch
+      - '{{.NPX_HANDLE}}ndb nest start --watch'
 
   start:inspect:legacy:
     deps:
       - :install:local:modules
       - :install:npm:nest
     cmds:
-      - nest start --debug --watch
+      - '{{.NPX_HANDLE}}nest start --debug --watch'
 
   start:prod:
     deps:
@@ -217,7 +218,7 @@ tasks:
       - :install:npm:nest
     desc: Run the application in `production` and `watch` mode and open DevTools
     cmds:
-      - ndb nodemon
+      - '{{.NPX_HANDLE}}ndb nodemon'
 
   test:
     deps:
@@ -225,7 +226,7 @@ tasks:
       - :install:npm:jest
     desc: Run the unit tests for an NPM project
     cmds:
-      - jest
+      - '{{.NPX_HANDLE}}jest'
 
   test:coverage:
     deps:
@@ -233,7 +234,7 @@ tasks:
       - :install:npm:jest
     desc: Generate code coverage assets
     cmds:
-      - jest --coverage
+      - '{{.NPX_HANDLE}}jest --coverage'
 
   test:dashboard:
     deps:
@@ -241,7 +242,7 @@ tasks:
       - :install:npm:majestic
     desc: Run and manage test cases from a web interface (powered by `majestic`)
     cmds:
-      - majestic --debug
+      - '{{.NPX_HANDLE}}majestic --debug'
 
   test:debug:
     deps:
@@ -249,7 +250,7 @@ tasks:
       - :install:npm:jest
     desc: Debug tests in `watch` mode
     cmds:
-      - jest --watch
+      - '{{.NPX_HANDLE}}jest --watch'
 
   test:e2e: 'true'
 
@@ -262,11 +263,11 @@ tasks:
       - :install:npm:ts-node
     desc: Debug tests with DevTools in `watch` mode
     cmds:
-      - ndb nodemon --config .common/nodemon-jest.json
+      - '{{.NPX_HANDLE}}ndb nodemon --config .common/nodemon-jest.json'
 
   typesync:
     deps:
       - :install:npm:typesync
     desc: Install missing type definitions
     cmds:
-      - typesync
+      - '{{.NPX_HANDLE}}typesync'
