--- a/.config/taskfiles/upstream/Taskfile.yml
+++ b/.config/taskfiles/upstream/Taskfile.yml
@@ -4,12 +4,60 @@ version: '3'
 tasks:
   common:
     cmds:
+      - task: prune
       - task: :upstream:common:clone
       - task: :upstream:common:copy
-      - task: :upstream:common:merge-and-template
+      - task: :upstream:common:merge
       - task: :upstream:common:clean
+      - task: :upstream:common:template
+      - task: :vscode:generate
+      - task: :fix:eslint
+
+  commondocs:
+    cmds:
+      - task: prune
+      - task: :upstream:commondocs:clone
+      - task: :upstream:commondocs:copy
+      - task: :upstream:commondocs:merge
+      - task: :upstream:commondocs:clean
+      - task: :upstream:commondocs:template
+      - task: :vscode:generate
+      - task: :fix:eslint
+
+  docs:
+    cmds:
+      - task: prune
+      - task: :upstream:docs:clone
+      - task: :upstream:docs:copy
+      - task: :upstream:docs:merge
+      - task: :upstream:docs:clean
+      - task: :upstream:docs:template
+      - task: :vscode:generate
       - task: :fix:eslint
 
   project:
     cmds:
+      - task: prune
       - task: :upstream:project:clone
+      - task: :upstream:project:copy
+      - task: :upstream:project:merge
+      - task: :upstream:project:clean
+      - task: :vscode:generate
+      - task: :upstream:project:merge:package:json-blueprint-overrides
+      - task: :common:update:update
+      - task: :fix:eslint
+
+  prune:
+    cmds:
+      - rm -rf .config/flake8
+      - rm -rf .config/taskfiles/Taskfile-install.yml
+      - npm install -g eslint
+
+  shared:
+    cmds:
+      - task: prune
+      - task: :upstream:shared:copy
+      - task: :upstream:shared:prepare
+      - task: :upstream:shared:template
+      - task: :vscode:generate
+      - task: :fix:eslint
