--- a/.config/yamllint.yml
+++ b/.config/yamllint.yml
@@ -4,14 +4,18 @@ ignore: |
   .cache/
   .common/
   .git/
-  .github/
-  .gitlab/
   .husky/
   .modules/
+  .npm/
+  .pnpm-store/
+  .shared/
   .task/
   .venv/
+  .vscode/
   .tox
   .travis.yml
+  build/
+  dist/
   node_modules/
   pnpm-lock.yaml
   roles/
