--- a/.config/taskfiles/upstream/Taskfile-shared.yml
+++ b/.config/taskfiles/upstream/Taskfile-shared.yml
@@ -76,7 +76,7 @@ tasks:
       TMP:
         sh: mktemp
     cmds:
-      - wget {{.VARIABLES_URL}} .variables.json
+      - curl -s {{.VARIABLES_URL}} > .variables.json
       - jq --arg blueprint "$(jq -r '.blueprint' package.json | sed 's/^null$/{}/')"
         --arg version "$(jq -r '.version' package.json | sed 's/^null$/0.0.1/')"
         --arg poetry "$(jq -r '.keywords | join("\", \"")' package.json | sed 's/$/"/' | sed 's/^/"/')"
