--- a/.gitlab/ci/lint/eslint.gitlab-ci.yml
+++ b/.gitlab/ci/lint/eslint.gitlab-ci.yml
@@ -4,6 +4,7 @@ eslint:
   image:
     name: megabytelabs/yamllint:slim
     entrypoint: ['']
+  allow_failure: true
   variables:
     GIT_DEPTH: 1
   script:
