--- a/.gitlab/ci/lint/prettier.gitlab-ci.yml
+++ b/.gitlab/ci/lint/prettier.gitlab-ci.yml
@@ -4,6 +4,7 @@ prettier:
   image:
     name: megabytelabs/prettier-write:slim
     entrypoint: ['']
+  allow_failure: true
   variables:
     GIT_DEPTH: 1
     NODE_MODULES_PATH: /usr/local/lib/node_modules
