--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "private": false,
-  "name": "@mblabs/shared-common-files",
-  "version": "1.0.0",
+  "name": "@mblabs/common-shared",
+  "version": "0.0.1",
   "description": "Includes common files used across different types of common file repositories (e.g. Go, Python, etc.)",
   "license": "MIT",
   "author": "Brian Zalewski <brian@megabyte.space> (https://megabyte.space)",
   "homepage": "https://megabyte.space",
   "repository": {
     "type": "git",
-    "url": "git+https://gitlab.com/megabyte-labs/common/shared.git"
+    "url": "git+https://github.com/ProfessorManhattan/common-shared.git"
   },
   "bugs": {
     "email": "help@megabyte.space",
@@ -17,7 +17,8 @@
   "type": "module",
   "scripts": {
     "help": "task --list",
-    "start": "bash .start.sh",
+    "prepare": "task common:husky",
+    "start": "bash .config/start.sh",
     "update": "task update"
   },
   "config": {
@@ -32,12 +33,23 @@
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^13.1.0",
-    "@mblabs/eslint-config": "^1.0.61",
+    "@mblabs/eslint-config": "^1.0.0",
     "@mblabs/prettier-config": "^14.14.14",
-    "@typescript-eslint/eslint-plugin": "^5.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.2.0",
     "cz-conventional-changelog": "^3.3.0",
     "handlebars-helpers": "^0.10.0"
   },
+  "keywords": [
+    "megabytelabs",
+    "common",
+    "shared",
+    "files",
+    "configurations",
+    "taskfiles",
+    "gitlab-ci",
+    "package",
+    "professormanhattan"
+  ],
   "engines": {
     "node": ">=14"
   },
@@ -85,6 +97,10 @@
       "task image:compress --"
     ],
     "**/*.(js|jsx|ts)": [
+      "task fix:js --",
+      "task lint:js --"
+    ],
+    "**/*.(js|jsx|ts|tsx)": [
       "task fix:js --",
       "task lint:js --"
     ],
