--- a/common/.config/taskfiles/upstream/Taskfile.yml
+++ b/common/.config/taskfiles/upstream/Taskfile.yml
@@ -61,3 +61,18 @@ tasks:
       - task: :upstream:shared:template
       - task: :vscode:generate
       - task: :fix:eslint
+
+  variables:
+    deps:
+      - :install:software:jq
+    env:
+      TMP:
+        sh: mktemp
+    cmds:
+      - jq --arg blueprint "$(jq -r '.blueprint' package.json | sed 's/^null$/{}/')"
+        --arg version "$(jq -r '.version' package.json | sed 's/^null$/0.0.1/')"
+        --arg poetry "$(jq -r '.keywords | join("\", \"")' package.json | sed 's/$/"/' | sed 's/^/"/')"
+        --arg encoded "$(jq -r '.blueprint.repository.gitlab' package.json | sed 's/https:\/\/gitlab.com\///' | sed 's/\//%252F/g')"
+        -S '. = (. * ($blueprint | fromjson)) | .version = $version | .poetryKeywords = $poetry | .gitlab_encoded_path = $encoded'
+         {{.INPUT_FILE}} > "$TMP"
+      - mv "$TMP" {{.OUTPUT_FILE}}
