--- a/common/.config/taskfiles/upstream/Taskfile-project.yml
+++ b/common/.config/taskfiles/upstream/Taskfile-project.yml
@@ -137,12 +137,8 @@ tasks:
         wait
 
   template:variables:
-    deps:
-      - :install:software:jq
     cmds:
-      - jq --arg blueprint "$(jq -r '.blueprint' package.json | sed 's/^null$/{}/')"
-        --arg version "$(jq -r '.version' package.json | sed 's/^null$/0.0.1/')"
-        --arg poetry "$(jq -r '.keywords | join("\", \"")' package.json | sed 's/$/"/' | sed 's/^/"/')"
-        --arg encoded "$(jq -r '.blueprint.repository.gitlab' package.json | sed 's/https:\/\/gitlab.com\///' | sed 's/\//%252F/g')"
-        -S '. = (. * ($blueprint | fromjson)) | .version = $version | .poetryKeywords = $poetry | .gitlab_encoded_path = $encoded'
-        .config/variables.json > ./.variables.json
+      - task: :upstream:variables
+        vars:
+          INPUT_FILE: .config/variables.json
+          OUTPUT_FILE: ./.variables.json
