Changing tests folder to test for Ansible stuff.

--- a/.gitlab/ci/test/ansible/role.windows.gitlab-ci.yml
+++ b/.gitlab/ci/test/ansible/role.windows.gitlab-ci.yml
@@ -23,4 +23,4 @@ windows:
         - requirements.yml
     - if: $CI_MERGE_REQUEST_TARGET_BRANCH_NAME == 'master'
   script:
-    - ./tests/windows/test.ps1
+    - ./test/windows/test.ps1
