--- a/.config/taskfiles/ansible/Taskfile-test.yml
+++ b/.config/taskfiles/ansible/Taskfile-test.yml
@@ -11,17 +11,17 @@ tasks:
     summary: |
       # Run the Ansible play on the local machine
 
-      This task will use the inventory stored in `tests/inventory`, the playbook
-      file stored in `tests/test.yml`, and the Ansible configuration file stored in
-      `tests/ansible.cfg` to run the play. At the beginning of the play, you will
+      This task will use the inventory stored in `test/<OS>/inventory`, the playbook
+      file stored in `test/<OS>/test.yml`, and the Ansible configuration file stored in
+      `test/<OS>/ansible.cfg` to run the play. At the beginning of the play, you will
       be prompted for the sudo password.
     cmds:
       - true info "Running the Ansible play locally"
-      - cp tests/inventory inventory
+      - cp test/inventory inventory
       - if [ ! -f main.yml.bak ]; then cp main.yml main.yml.bak; fi
-      - cp tests/test.yml main.yml
+      - cp test/test.yml main.yml
       - if [ ! -f ansible.cfg.bak ]; then cp ansible.cfg ansible.cfg.bak; fi
-      - cp tests/ansible.cfg ansible.cfg
+      - cp test/ansible.cfg ansible.cfg
       - ansible-playbook --ask-sudo-pass main.yml
       - mv main.yml.bak main.yml
       - mv ansible.cfg.bak ansible.cfg
